src/styles.css
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

:root {
    --content-background: rgb(54, 54, 54);
    --nav-background: rgb(82, 82, 82);
    --button-hover: rgba(207, 207, 207, 0.473) ;
}

nav {
    display: flex;
    justify-content: center;
    height: 100vh;
    width: 20rem;
    background-color: var(--nav-background);
}

header {
     height: 100vh;
    width: 20rem;
}

body {
    display: flex;
    background-color: var(--content-background);
}

.button-container button {
    display: flex;
    justify-content: flex-start;
    align-items: center;
    height: 3rem;
    padding-left: 2rem;
    width: 100%;
    border: none;
    background-color: var(--nav-background);
}

button:hover {
    background-color: var(--button-hover);
}

h1 {
    height: 50px;
    
}


.button-container {
    display: flex;
    width: 100%;
    flex-direction: column;
}

#delete-button {
    display: flex;

}


#sidebar-container {
display: flex;
margin-top: 10rem;
width: 20rem;
align-items: flex-start;
justify-content: flex-start;
background-color: var(--nav-background);

}

#main-content {
    display: flex;
    flex-wrap:wrap;
    width: 100%;
    height: auto;
    margin: 30px 30px 0 30px ;

    

}

.overlay {
  display: flex;
  position: fixed;
  width: 100%;
  height: 100%;
  top: 0;
  left: 0;
  background-color: rgba(0, 0, 0, 0.7);
  justify-content: center;
  align-items: center;
  z-index: 100;   
}



.modal-form {
    display: flex;
    flex-direction: column;
    background-color: var(--nav-background);
    padding: 2rem;
    text-align: center;
    gap: 0.6rem;
    border-radius: 10px;
    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.3);
    max-width: 30rem;
    height: auto;
    width: 90%;
}





#project-container, h1 {
    display: flex;
    flex-wrap: wrap;
    flex-direction: row;
    align-items: flex-start;
    justify-content: flex-start;
    width: 100%;
    margin-top: 20px;
    height: 5rem;
    gap: 1rem;

}


.project-card {
    align-items: flex-start;
    flex: 1 2 50rem;
    min-width: 12rem;
    height: auto;
    gap: 2em;
    padding: 2em;
    border: 2px solid var(--nav-background);
}

 .project-card > button, .todo-container > p {
   margin: 10px 0 10px 0;
}

.todos-container {
    opacity: 0;
    max-height: 0;
    overflow: hidden;
    transition: opacity 0.5s ease, max-height 0.5s ease;
    

}

.todos-container.show {
    opacity: 1;
    max-height: 1000px;
    width: 100%;
    box-shadow: 1px 1px 10px 1px rgba(110, 110, 110, 0.600);
    
}


.todo {
    display: flex;
    justify-content: flex-start;
    align-items: center;
    gap: 1rem;
    padding: 1rem;
    height: auto;
    width: 100%;
    border: 1px solid rgba(110, 110, 110, 0.600);
    box-shadow: 5px 5px 5px 5px rgba(110, 110, 110, 0.600);
    background-color: var(--nav-background);
}




.project-card > button, .todo > button {
    padding: 0.5rem;
}

/* Priority colours*/

.priority-low,
.priority-medium,
.priority-high {
    display: inline-block;
    flex-shrink: 0;
    width: 12px;
    height: 12px;
    border-radius: 50%;
    margin-right: 6px;
}

.priority-low {
    background-color: green;
    box-shadow: 0 0 1px 3px rgba(0, 128, 0, 0.600);
}

.priority-medium {
    background-color: orange;
    box-shadow:0 0 1px 3px rgba(255, 165, 0, 0.600) ;
}

.priority-high {
    background-color: red;
    box-shadow: 0 0 1px 3px rgba(255, 0, 0, 0.600);
}

#project-list {
    display: flex;
    flex-direction: column;
    height: auto;
    transform: scaleY(0);
    transform-origin: top;
    opacity: 0;
    transition: transform 0.5s ease;

}


#project-list.show {
transform: scaleY(1);
width: 100%;
justify-content: center;
align-items: center;
opacity: 1;
box-shadow: 2px 0 2px 3px rgba(54, 54, 54, 0.500);
}

.my-project {
    width: 100%;
    height: 2rem;
    padding: 0.5rem;
    padding-left: 2rem;
}

.my-project:hover {
 background-color: var(--button-hover);

}

